<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/teamNameStyle"
                    android:text="@string/teamA_textView" />

                <TextView
                    android:id="@+id/team_a_goal_score"
                    style="@style/mainScoreStyle"
                    android:text="@string/score_textView" />

                <View style="@style/horizontalDividerStyle" />

                <LinearLayout style="@style/secondaryScoreLayoutStyle">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/team_a_foul_text_view"
                            style="@style/secondaryScoreStyle"
                            android:text="@string/foul_textView" />

                        <TextView
                            android:id="@+id/team_a_foul_score"
                            style="@style/secondaryScoreStyle"
                            android:text="@string/score_textView" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/team_a_penalty_text_view"
                            style="@style/secondaryScoreStyle"
                            android:text="@string/penalty_textView" />

                        <TextView
                            android:id="@+id/team_a_penalty_score"
                            style="@style/secondaryScoreStyle"
                            android:freezesText="true"
                            android:text="@string/score_textView" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/secondaryScoreStyle"
                            android:text="@string/yellowCard_textView" />

                        <TextView
                            android:id="@+id/team_a_yellow_card_score"
                            style="@style/secondaryScoreStyle"
                            android:freezesText="true"
                            android:text="@string/score_textView" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/secondaryScoreStyle"
                            android:text="@string/redCard_textView" />

                        <TextView
                            android:id="@+id/team_a_red_card_score"
                            style="@style/secondaryScoreStyle"
                            android:freezesText="true"
                            android:text="@string/score_textView" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    style="@style/buttonStyle"
                    android:onClick="goalForTeamA"
                    android:text="@string/goal_button" />

                <Button
                    style="@style/buttonStyle"
                    android:onClick="addFoulForTeamA"
                    android:text="@string/foul_button" />

                <Button
                    style="@style/buttonStyle"
                    android:onClick="addPenaltyForTeamA"
                    android:text="@string/penalty_button" />

                <Button
                    style="@style/buttonStyle"
                    android:onClick="addYellowCardForTeamA"
                    android:text="@string/yellowCard_button" />

                <Button
                    style="@style/buttonStyle"
                    android:onClick="addRedCardForTeamA"
                    android:text="@string/redCard_button" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/viewMarginTop"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/teamNameStyle"
                    android:text="@string/teamB_textView" />

                <TextView
                    android:id="@+id/team_b_goal_score"
                    style="@style/mainScoreStyle"
                    android:text="@string/score_textView" />

                <View style="@style/horizontalDividerStyle" />

                <LinearLayout style="@style/secondaryScoreLayoutStyle">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/team_b_foul_text_view"
                            style="@style/secondaryScoreStyle"
                            android:text="@string/foul_textView" />

                        <TextView
                            android:id="@+id/team_b_foul_score"
                            style="@style/secondaryScoreStyle"
                            android:freezesText="true"
                            android:text="@string/score_textView" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/team_b_penalty_text_view"
                            style="@style/secondaryScoreStyle"
                            android:text="@string/penalty_textView" />

                        <TextView
                            android:id="@+id/team_b_penalty_score"
                            style="@style/secondaryScoreStyle"
                            android:freezesText="true"
                            android:text="@string/score_textView" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/secondaryScoreStyle"
                            android:text="@string/yellowCard_textView" />

                        <TextView
                            android:id="@+id/team_b_yellow_card_score"
                            style="@style/secondaryScoreStyle"
                            android:freezesText="true"
                            android:text="@string/score_textView" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/secondaryScoreStyle"
                            android:text="@string/redCard_textView" />

                        <TextView
                            android:id="@+id/team_b_red_card_score"
                            style="@style/secondaryScoreStyle"
                            android:freezesText="true"
                            android:text="@string/score_textView" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    style="@style/buttonStyle"
                    android:onClick="goalForTeamB"
                    android:text="@string/goal_button" />

                <Button
                    style="@style/buttonStyle"
                    android:onClick="addFoulForTeamB"
                    android:text="@string/foul_button" />

                <Button
                    style="@style/buttonStyle"
                    android:onClick="addPenaltyForTeamB"
                    android:text="@string/penalty_button" />

                <Button
                    style="@style/buttonStyle"
                    android:onClick="addYellowCardForTeamB"
                    android:text="@string/yellowCard_button" />

                <Button
                    style="@style/buttonStyle"
                    android:onClick="addRedCardForTeamB"
                    android:text="@string/redCard_button" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/buttonMarginTop"
            android:onClick="resetAllScores"
            android:text="@string/reset_button"
            android:textColor="@color/textColorPrimary" />

    </LinearLayout>
</ScrollView>